Added the possibility for the client to  - see their pictures  - like them  - Form bookme updated also, now you can see the price changing as you choose what you want  - Added the possibility to view the book mes

--- a/client/templates/client/owner_dashboard.html
+++ b/client/templates/client/owner_dashboard.html
@@ -53,7 +53,7 @@
         <div class="recentBooks">
             <div class="cardHeader">
                 <h2>Recent Bookings</h2>
-                <a href="#" class="btn">View All</a>
+                <a href="{% url 'client:owner_bookmes' %}" class="btn">View All</a>
             </div>
             <table>
                 <thead>
