--- a/client/templates/client/photo_details.html
+++ b/client/templates/client/photo_details.html
@@ -24,17 +24,17 @@
     <form action="#{# {% url 'client:favorite' %} #}" method="post">
         {% csrf_token %}
         {% if album %}
-            {% for photo in all_photos %}
+            {% for photo in album.photo_set.all %}
                 <div class="container">
                     <div class="gallery">
                         <div class="gallery-item" tabindex="0">
                             <img src="{{ photo.file.url }}" class="gallery-image">
-                            <input type="submit" id="photo{{ forloop.counter }}" name="photo"
+                            <input type="checkbox" id="photo{{ forloop.counter }}" name="photo"
                             value="{{ photo.id }}">
                             <label for="photo{{ forloop.counter }}">
                                 {{ photo.file.name }}
                                 {% if photo.is_favorite %}
-                                    <span class="fa fa-star pull-left" style="margin-right: 1em;"></span>
+                                    <img src="https://i.imgur.com/b9b13Rd.png" alt="">
                                 {% endif %}
                             </label><br>
                         </div>
@@ -42,7 +42,7 @@
                 </div>
 
             {% endfor %}
-{#            <button type="submit" value="{{ photo.id }}">Favorite</button>#}
+            <input type="submit" value="Favorite">
         {% else %}
             <h2 class="alert-info" id="info" style="text-align: center; margin-top: auto">
                 Hi, {{ user.first_name }}. You don't have any photos uploaded yet.</h2>
