--- a/client/templates/client/bookme.html
+++ b/client/templates/client/bookme.html
@@ -1,5 +1,5 @@
 {% extends 'homepage/base.html' %}
-{% block title %}Contact us{% endblock %}
+{% block title %}Book me{% endblock %}
 {% block body %}
 	<div class="clearfix"></div>
 	<!-- Header section end  -->
@@ -10,8 +10,14 @@
 	</div>
 	Google Map end -->
     <style>
+            body {
+                background-color: ghostwhite;
+                background-repeat: no-repeat;
+                background-position: initial;
+                background-size: cover;
+        }
         input[type=text], input[type=email] {
-            width: 100%;
+            width: 90%;
             display: inline-block;
             font-size: 14px;
             font-weight: 500;
@@ -27,8 +33,72 @@
                 min-height: 165px;
                 margin-bottom: 38px;
             }
-        button{
 
+        button {
+          align-items: center;
+          background-image: linear-gradient(135deg, #f34079 40%, #fc894d);
+          border: 0;
+          border-radius: 10px;
+          box-sizing: border-box;
+          color: #fff;
+          cursor: pointer;
+          display: flex;
+          flex-direction: column;
+          font-family: "Codec cold",sans-serif;
+          font-size: 14px;
+          font-weight: 700;
+          height: 40px;
+          justify-content: center;
+          letter-spacing: .4px;
+          line-height: 1;
+          max-width: 100%;
+          padding-left: 20px;
+          padding-right: 20px;
+          padding-top: 3px;
+          text-decoration: none;
+          text-transform: uppercase;
+          user-select: none;
+          -webkit-user-select: none;
+          touch-action: manipulation;
+        }
+
+        button:active {
+          outline: 0;
+        }
+
+        button:hover {
+          outline: 0;
+        }
+
+        button span {
+          transition: all 200ms;
+        }
+
+        button:hover span {
+          transform: scale(.9);
+          opacity: .75;
+        }
+
+        @media screen and (max-width: 991px) {
+          button {
+            font-size: 15px;
+            height: 50px;
+          }
+
+          button span {
+            line-height: 50px;
+          }
+        }
+
+        select {
+            position: relative;
+            left: 5px;
+            background-color: #b8daff;
+            border-radius: 5px;
+            cursor: grab;
+        }
+
+        #form-container {
         }
     </style>
 
@@ -38,7 +108,7 @@
 			<div class="row">
 				<div class="col-lg-4">
 					<div class="contact-text">
-						<h3>READ ME FIRST</h3>
+						<h3>Note</h3>
 						<h6>
                             The price vary according to :
                         </h6>
@@ -54,13 +124,41 @@
 
 					</div>
 				</div>
-				<div class="col-lg-8">
+				<div class="col-lg-8" id="form-container">
 					<form action="" method="post">
                        {% csrf_token %}
-                       {{ form }}
+                        <div>
+                            <label for="fullname">Full Name : </label>
+                            {{ form.full_name }}
+                        </div>
+                        <div>
+                            <label for="email">Email address  : </label>
+                            {{ form.email }}
+                        </div>
+                        <div>
+                            <div onclick="display();">
+                                <label for="sessiontype"> Type of photo session:
+                                    {{ form.session_type }}
+                                </label>
+                            </div>
+                            <div onclick="display();">
+                                <label for="place"> Location:
+                                    {{ form.place }}
+                                </label>
+                            </div>
+                            <div onclick="display();">
+                                <label for="package"> Select a package:
+                                    {{ form.package }}
+                                </label>
+                            </div>
+                        </div>
+                        <div class="info">
+                            <p id="totalPrice"></p>
+                            <p id="note"></p>
+                        </div>
+
                         <br>
-                        <br>
-                       <input class="btn btn-primary" type="submit" value="Submit" style="width: 100px">
+                        <button class="button" type="submit" value="Submit"><span>Submit</span></button>
                     </form>
 				</div>
 			</div>
@@ -84,6 +182,71 @@
 
 		for (var field in form_fields){
 			form_fields[field].className += ' form-control'
+		}
+
+        function display() {
+            const session = document.getElementById("id_session_type").value;
+            const place = document.getElementById("id_place").value;
+            const packages = document.getElementById("id_package").value;
+
+            if (session === 'portrait' & place === 'outdoor' & packages == 7) {
+				document.getElementById('totalPrice').innerHTML = "Total: 200$";
+				document.getElementById('note').innerHTML = "";
+			} else if (session === 'portrait' & place === 'outdoor' & packages == 15) {
+				document.getElementById('totalPrice').innerHTML = "Total: 300$";
+				document.getElementById('note').innerHTML = "";
+			} else if (session === 'portrait' & place === 'outdoor' & packages == 30) {
+				document.getElementById('totalPrice').innerHTML = "Total: 400$";
+				document.getElementById('note').innerHTML = "";
+			} else if (session === 'portrait' & place === 'outdoor' & packages == 60) {
+				document.getElementById('totalPrice').innerHTML = "Total: 550$";
+				document.getElementById('note').innerHTML = "";
+			} else if (session === 'birthday' & place === 'outdoor' & packages == 7) {
+				document.getElementById('totalPrice').innerHTML = "Total: 200$";
+				document.getElementById('note').innerHTML = "";
+			} else if (session === 'birthday' & place === 'outdoor' & packages == 15) {
+				document.getElementById('totalPrice').innerHTML = "Total: 300$";
+				document.getElementById('note').innerHTML = "";
+			} else if (session === 'birthday' & place === 'outdoor' & packages == 30) {
+				document.getElementById('totalPrice').innerHTML = "Total: 400$";
+				document.getElementById('note').innerHTML = "";
+			} else if (session === 'birthday' & place === 'outdoor' & packages == 60) {
+				document.getElementById('totalPrice').innerHTML = "Total: 550$";
+				document.getElementById('note').innerHTML = "";
+
+			} else if (session === 'portrait' & place === 'studio' & packages == 7) {
+				document.getElementById('totalPrice').innerHTML = "Total: 245$";
+				document.getElementById('note').innerHTML = "The extra 45$ for the studio.";
+			} else if (session === 'portrait' & place === 'studio' & packages == 15) {
+				document.getElementById('totalPrice').innerHTML = "Total: 345$";
+				document.getElementById('note').innerHTML = "The extra 45$ for the studio.";
+			} else if (session === 'portrait' & place === 'studio' & packages == 30) {
+				document.getElementById('totalPrice').innerHTML = "Total: 445$";
+				document.getElementById('note').innerHTML = "The extra 45$ for the studio.";
+			} else if (session === 'portrait' & place === 'studio' & packages == 60) {
+				document.getElementById('totalPrice').innerHTML = "Total: 550$";
+			} else if (session === 'birthday' & place === 'studio' & packages == 7) {
+				document.getElementById('totalPrice').innerHTML = "Total: 245$";
+				document.getElementById('note').innerHTML = "The extra 45$ for the studio.";
+			} else if (session === 'birthday' & place === 'studio' & packages == 15) {
+				document.getElementById('totalPrice').innerHTML = "Total: 345$";
+				document.getElementById('note').innerHTML = "The extra 45$ for the studio.";
+			} else if (session === 'birthday' & place === 'studio' & packages == 30) {
+				document.getElementById('totalPrice').innerHTML = "Total: 445$";
+				document.getElementById('note').innerHTML = "The extra 45$ for the studio.";
+			} else if (session === 'birthday' & place === 'studio' & packages == 60) {
+				document.getElementById('totalPrice').innerHTML = "Total: 550$";
+			} else if (session === 'wOthers') {
+				document.getElementById('totalPrice').innerHTML = "";
+				document.getElementById('note').innerHTML = "Contact me for specifics.";
+			} else if (place === 'others'){
+				document.getElementById('totalPrice').innerHTML = "";
+				document.getElementById('note').innerHTML = "Contact me for specifics.";
+			}
+			else {
+				document.getElementById('totalPrice').innerHTML = "";
+				document.getElementById('note').innerHTML = "";
+			}
 		}
 	</script>
 
