Added the following:  - Creation of model photos for front page  - Creation of model album for portfolio  - Owner can add multiple photo to the front page in the owner dashboard
Will Add
 - Owner will be able to add multiple photo for client

--- a/client/templates/client/base.html
+++ b/client/templates/client/base.html
@@ -27,6 +27,12 @@
                 </a>
             </li>
             <li>
+                <a href="{% url 'client:add_photos_homepage' %}">
+                    <span class="icon"><ion-icon name="images-outline"></ion-icon></span>
+                    <span class="title">Add Photo Homepage</span>
+                </a>
+            </li>
+            <li>
                 <a href="{% url 'client:owner_client' %}">
                     <span class="icon"><ion-icon name="people-outline"></ion-icon></span>
                     <span class="title">Client</span>
@@ -78,6 +84,9 @@
                     <ion-icon name="search-outline"></ion-icon>
                 </label>
             </div>
+
+            {% block addmorephotos %}
+            {% endblock %}
 
             <!-- userImg -->
             <div class="user">
