--- a/client/templates/client/test.html
+++ b/client/templates/client/test.html
@@ -66,4 +66,97 @@
                 Wanna book me ? Click <a href="{% url 'client:bookme' %}">here</a> </div>
         {% endif %}
     </form>
+
+<style>
+             body {
+                background-color: ghostwhite;
+                background-repeat: no-repeat;
+                background-position: initial;
+                background-size: cover;
+        }
+        input[type=text], input[type=email] {
+            width: 90%;
+            display: inline-block;
+            font-size: 14px;
+            font-weight: 500;
+            color: #7d7d7d;
+            border: none;
+            border-bottom: 1px solid #b2b2b2;
+            padding-bottom: 14px;
+            margin-bottom: 20px;
+            background: transparent;
+            }
+        textarea {
+                height: 165px;
+                min-height: 165px;
+                margin-bottom: 38px;
+            }
+
+        button {
+          align-items: center;
+          background-image: linear-gradient(135deg, #f34079 40%, #fc894d);
+          border: 0;
+          border-radius: 10px;
+          box-sizing: border-box;
+          color: #fff;
+          cursor: pointer;
+          display: flex;
+          flex-direction: column;
+          font-family: "Codec cold",sans-serif;
+          font-size: 14px;
+          font-weight: 700;
+          height: 40px;
+          justify-content: center;
+          letter-spacing: .4px;
+          line-height: 1;
+          max-width: 100%;
+          padding-left: 20px;
+          padding-right: 20px;
+          padding-top: 3px;
+          text-decoration: none;
+          text-transform: uppercase;
+          user-select: none;
+          -webkit-user-select: none;
+          touch-action: manipulation;
+        }
+
+        button:active {
+          outline: 0;
+        }
+
+        button:hover {
+          outline: 0;
+        }
+
+        button span {
+          transition: all 200ms;
+        }
+
+        button:hover span {
+          transform: scale(.9);
+          opacity: .75;
+        }
+
+        @media screen and (max-width: 991px) {
+          button {
+            font-size: 15px;
+            height: 50px;
+          }
+
+          button span {
+            line-height: 50px;
+          }
+        }
+
+        select {
+            position: relative;
+            left: 5px;
+            background-color: #b8daff;
+            border-radius: 5px;
+            cursor: grab;
+        }
+
+        #form-container {
+        }
+</style>
 </html>
