--- a/client/templates/client/owner_addphotos.html
+++ b/client/templates/client/owner_addphotos.html
@@ -54,7 +54,7 @@
                             <select name="category" class="form-control">
                                 <option value='none'>Select a client...</option>
 
-                                {% for album in all_albums %}
+                                {% for album in albums %}
                                 <option value='{{album.id}}'>{{album.owner}}</option>
                                 {% endfor %}
                             </select>
