--- a/client/templates/client/owner_addphotos.html
+++ b/client/templates/client/owner_addphotos.html
@@ -59,6 +59,7 @@
                                 {% endfor %}
                             </select>
                         </div>
+                    <p>if you can't select a client click <a href="https://crueltouch.com/admin/client/album/add/">here</a> to add one.</p>
 
                         <br>
 
