Fix safari bug for the form where the function showprice weren't called

--- a/client/templates/client/bookme.html
+++ b/client/templates/client/bookme.html
@@ -134,17 +134,17 @@
                             {{ form.email }}
                         </div>
                         <div>
-                            <div onclick="display();">
+                            <div onchange="display();">
                                 <label for="sessiontype"> Type of photo session:
                                     {{ form.session_type }}
                                 </label>
                             </div>
-                            <div onclick="display();">
+                            <div onchange="display();">
                                 <label for="place"> Location:
                                     {{ form.place }}
                                 </label>
                             </div>
-                            <div onclick="display();">
+                            <div onchange="display();">
                                 <label for="package"> Select a package:
                                     {{ form.package }}
                                 </label>
