--- a/client/templates/client/bookme.html
+++ b/client/templates/client/bookme.html
@@ -11,7 +11,6 @@
 	Google Map end -->
     <style>
         * {
-            background-image: url("12p.jpg");
             background-size: cover;
         }
         input[type=text], input[type=email] {
@@ -32,7 +31,7 @@
                 margin-bottom: 38px;
             }
 
-        button {
+        a.button {
           align-items: center;
           background-image: linear-gradient(135deg, #f34079 40%, #fc894d);
           border: 0;
@@ -60,30 +59,30 @@
           touch-action: manipulation;
         }
 
-        button:active {
+        a.button:active {
           outline: 0;
         }
 
-        button:hover {
+        a.button:hover {
           outline: 0;
         }
 
-        button span {
+        a.button span {
           transition: all 200ms;
         }
 
-        button:hover span {
+        a.button:hover span {
           transform: scale(.9);
           opacity: .75;
         }
 
         @media screen and (max-width: 991px) {
-          button {
+          a.button {
             font-size: 15px;
             height: 50px;
           }
 
-          button span {
+          a.button span {
             line-height: 50px;
           }
         }
@@ -156,8 +155,11 @@
                         </div>
 
                         <br>
-                        <button class="button" type="submit" value="Submit"><span>Submit</span></button>
+                        <a class="button" type="submit" value="Submit" href="{% url 'client:scheduletimewithme' %}"><span>Schedule time with me</span></a>
                     </form>
+
+
+
 				</div>
 			</div>
 		</div>
@@ -247,5 +249,4 @@
 			}
 		}
 	</script>
-
 {% endblock %}
