--- a/client/templates/client/register.html
+++ b/client/templates/client/register.html
@@ -76,8 +76,8 @@
 
 		//Query All input fields
 		var form_fields = document.getElementsByTagName('input')
-		form_fields[1].placeholder='First name..';
-		form_fields[2].placeholder='Email..';
+		form_fields[1].placeholder='Name...';
+		form_fields[2].placeholder='Email...';
 		form_fields[3].placeholder='Enter password...';
 		form_fields[4].placeholder='Re-enter Password...';
 
