--- a/client/templates/client/scheduletimewithme.html
+++ b/client/templates/client/scheduletimewithme.html
@@ -1,10 +1,10 @@
 {% extends 'homepage/base.html' %}
 {% block title %}Book me{% endblock %}
 {% block body %}
-
+    
     <!-- Calendly inline widget begin -->
-    <div class="calendly-inline-widget" data-url="https://calendly.com/crueltouch?hide_gdpr_banner=1" style="min-width:320px;height:630px;"></div>
-    <script type="text/javascript" src="https://assets.calendly.com/assets/external/widget.js" async></script>
+        <div class="calendly-inline-widget" data-url="https://calendly.com/crueltouch?hide_gdpr_banner=1?&name={{ client_name }}&email={{ client_email }}" style="min-width:320px;height:630px;"></div>
+        <script type="text/javascript" src="https://assets.calendly.com/assets/external/widget.js" async></script>
     <!-- Calendly inline widget end -->
 
 {% endblock %}
