Fix contact form page dashboard

--- a/client/templates/client/owner_contact_form.html
+++ b/client/templates/client/owner_contact_form.html
@@ -14,7 +14,7 @@
                     <td>Message</td>
                 </tr>
                 </thead>
-                {% if all_ %}
+                {% if all_contact %}
                     <tbody>
                     {% for contact in all_contact %}
 
