Fix TikTok icon link

--- a/homepage/templates/homepage/base.html
+++ b/homepage/templates/homepage/base.html
@@ -95,7 +95,7 @@
 					<div class="footer-social-links">
 						<a href="https://www.facebook.com/crueltouch" target="_blank"><i class="fa fa-facebook"></i></a>
 						<a href="https://www.instagram.com/crueltouch_/" target="_blank"><i class="fa fa-instagram"></i></a>
-                        <a href=""><ion-icon name="logo-tiktok"></ion-icon></a>
+                        <a href="https://vm.tiktok.com/ZM8quPJ9t/"><ion-icon name="logo-tiktok"></ion-icon></a>
 					</div>
                     {% endblock %}
 				</div>
