--- a/client/templates/client/bookme.html
+++ b/client/templates/client/bookme.html
@@ -31,7 +31,7 @@
                 margin-bottom: 38px;
             }
 
-        a.button {
+        .button {
           align-items: center;
           background-image: linear-gradient(135deg, #f34079 40%, #fc894d);
           border: 0;
@@ -59,30 +59,30 @@
           touch-action: manipulation;
         }
 
-        a.button:active {
+        .button:active {
           outline: 0;
         }
 
-        a.button:hover {
+        .button:hover {
           outline: 0;
         }
 
-        a.button span {
+        .button span {
           transition: all 200ms;
         }
 
-        a.button:hover span {
+        .button:hover span {
           transform: scale(.9);
           opacity: .75;
         }
 
         @media screen and (max-width: 991px) {
-          a.button {
+          .button {
             font-size: 15px;
             height: 50px;
           }
 
-          a.button span {
+          .button span {
             line-height: 50px;
           }
         }
@@ -158,7 +158,7 @@
                         </div>
 
                         <br>
-                        <input class="button" type="submit" value="Submit">
+                        <input class="button" type="submit" value="Schedule time with me">
                     </form>
 
 {#href="{% url 'client:scheduletimewithme' %}" <span>Schedule time with me</span>#}
