--- a/portfolio/templates/portfolio/index_portfolio.html
+++ b/portfolio/templates/portfolio/index_portfolio.html
@@ -16,7 +16,7 @@
 		<div class="row portfolio-gallery m-0">
             {% for photo in all_photos %}
 			<div class="mix col-xl-2 col-md-3 col-sm-4 col-6 p-0 {{ photo.album }}">
-				<a href="" class="portfolio-item img-popup set-bg" data-setbg="{{ photo.file.url }}"></a>
+				<a href="{% url 'pf:detail' photo.id %}" class="portfolio-item set-bg" data-setbg="{{ photo.file.url }}"></a>
 			</div>
             {% endfor %}
 
