--- a/portfolio/templates/portfolio/index_portfolio.html
+++ b/portfolio/templates/portfolio/index_portfolio.html
@@ -7,11 +7,9 @@
 	<div class="portfolio-section">
 		<ul class="portfolio-filter controls text-center">
 			<li class="control" data-filter="all">All</li>
-			<li class="control" data-filter=".portrait">Portrait</li>
-            <li class="control" data-filter=".birthday">Birthday</li>
-			<li class="control" data-filter=".weddings">Weddings</li>
-			<li class="control" data-filter=".lifestyle">Lifestyle</li>
-			<li class="control" data-filter=".fashion">Fashion</li>
+            {% for album in all_albums %}
+			<li class="control" data-filter=".{{ album.album_title }}">{{ album.album_title.capitalize }}</li>
+            {% endfor %}
 		</ul>
 		<div class="row portfolio-gallery m-0">
             {% for photo in all_photos %}
